fix flexbox problem and spacing issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -59,11 +59,6 @@ h1 {
   font-weight: 700;
   font-size: 3em; }
 
-h2 {
-  text-align: center;
-  color: #555;
-  font-size: 20px; }
-
 input {
   margin: 5px 0; }
 
@@ -94,8 +89,15 @@ input {
       flex-flow: row nowrap;
       justify-content: space-around; }
       #kanban .stages {
-        flex: 1 auto;
-        display: flex; } }
+        flex-grow: 1;
+        flex-shrink: 1;
+        flex-basis: auto;
+        min-width: 30vw; }
+        #kanban .stages h2 {
+          margin-top: 20px;
+          text-align: center;
+          color: #555;
+          font-size: 20px; } }
   #kanban .commit {
     margin-top: 20px; }
     #kanban .commit button {
@@ -103,12 +105,16 @@ input {
       line-height: 1.5em; }
 
 .tasks {
-  padding-left: 0; }
+  padding-left: 0;
+  margin: 0 auto; }
 
 .task-card {
   background-color: #fafafa;
+  margin: 0 auto;
   margin-top: 20px;
   border: 3px solid #FA6900;
+  padding: 20px;
+  padding-left: 30px;
   -webkit-box-shadow: 7px 10px 14px -4px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 7px 10px 14px -4px rgba(0, 0, 0, 0.75);
   box-shadow: 7px 10px 14px -4px rgba(0, 0, 0, 0.75); }
